# kafkaesq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ci/fixtures/: aiokafka-consumer-kwargs.json  aiokafka-producer-kwargs.json  java-consumer-kwargs.json
ci/go-validate/: go.mod  main.go
ci/java-validate/: ValidateConfig.java
examples/: README.md
examples/configs/: aiokafka-kwargs.json  confluent-cloud.properties  faust-app.yaml  go-consumer.json  java-consumer.properties  kafka-python-ssl.json  local-consumer.properties
examples/python/: aiokafka_consumer_from_properties.py  one_config_all_clients.py
src/kafkaesq/: __init__.py  __main__.py  _faust.py  _go.py  _java.py  _mappings.py  cli.py  convert.py
tests/: test_cli.py  test_convert.py  test_faust.py  test_faust_integration.py  test_integration.py  test_validate.py
