[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafkaesq"
version = "0.1.0"
description = "Convert Kafka client configs between confluent-kafka and aiokafka"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Barnhart", email = "williambbarnhart@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["kafka", "aiokafka", "confluent-kafka", "librdkafka", "config"]
dependencies = []

[project.urls]
Homepage = "https://github.com/wbarnha/kafkaesq"
Issues = "https://github.com/wbarnha/kafkaesq/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/kafkaesq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
