[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kafkaesq"
dynamic = ["version"]
description = "Convert Kafka client configs between confluent-kafka, aiokafka, and kafka-python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Barnhart", email = "williambbarnhart@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["kafka", "aiokafka", "confluent-kafka", "librdkafka", "config"]
dependencies = []

[project.scripts]
kafkaesq = "kafkaesq.cli:run"

[project.urls]
Homepage = "https://github.com/wbarnha/kafkaesq"
Issues = "https://github.com/wbarnha/kafkaesq/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "PyYAML"]
yaml = ["PyYAML"]
# For integration tests that construct real clients from converted configs.
integration = ["aiokafka", "kafka-python", "confluent-kafka"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Version comes from git tags (GitHub Releases): tag v0.2.0 -> version 0.2.0.
# Untagged commits get PEP 440 dev versions like 0.2.1.dev3+g1a2b3c4.
version_file = "src/kafkaesq/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
